--- a/TMS/TMS/Areas/Admin/Views/ManageUser/CreateHelpDesk.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/CreateHelpDesk.cshtml
@@ -1,9 +1,9 @@
-﻿@model TMS.Models.RequesterRegisterViewModel
+﻿@model TMS.Models.HelpDeskRegisterViewModel
 @{
-    ViewBag.Title = "Create Requester";
+    ViewBag.Title = "Create Help Desk";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-@using (Html.BeginForm("CreateRequester", "ManageUser", FormMethod.Post, new { @class = "form-horizontal", role = "form", area = "Admin", enctype = "multipart/form-data" }))
+@using (Html.BeginForm("CreateHelpDesk", "ManageUser", FormMethod.Post, new { @class = "form-horizontal", role = "form", area = "Admin", enctype = "multipart/form-data" }))
 {
     <div class="row" style="overflow: hidden">
         <div class="col-xs-8">
@@ -55,40 +55,11 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Department Name</label>
-                        <div class="col-sm-9">
-                            @Html.TextBoxFor(m => m.DepartmentName, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.DepartmentName, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label">Job Title</label>
-                        <div class="col-sm-9">
-                            @Html.TextBoxFor(m => m.JobTitle, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.JobTitle, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label">Company Name</label>
-                        <div class="col-sm-9">
-                            @Html.TextBoxFor(m => m.CompanyName, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.CompanyName, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-3 control-label">Company Address</label>
-                        <div class="col-sm-9">
-                            @Html.TextBoxFor(m => m.CompanyAddress, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.CompanyAddress, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-group">
                         <div class="col-sm-offset-3 col-sm-9">
                             <input type="submit" class="btn btn-success" value="Save" />
-                            @Html.ActionLink("Cancel", "Requester", null, new { @class = "btn btn-default" })
+                            @Html.ActionLink("Cancel", "HelpDesk", null, new { @class = "btn btn-default" })
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -106,7 +77,7 @@
     </div>
 }
 
-@section Scripts {
+@section scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script>
         $("#email-txt").keyup(function () {
