--- a/TMS/TMS/Areas/Admin/Views/ManageUser/Requester.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/Requester.cshtml
@@ -14,40 +14,38 @@
         vertical-align: middle;
     }
 </style>
-<section class="content">
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="box box-primary">
-                <div class="box-body large-text-container">
-                    <p>@Html.ActionLink("Create New", "CreateRequester", null, new { @class = "btn btn-success" })</p>
-                    <div class="pull-right" style="margin-right: 20px">
-                        <label>Availability:</label>
-                        <select id="availability-dropdown">
-                            <option value="2">All</option>
-                            <option value="1">Enabled Requesters</option>
-                            <option value="0">Disabled Requesters</option>
-                        </select>&nbsp;&nbsp;
-                        <label>Search:</label>
-                        <input type="text" id="search-txt" />
-                    </div>
-                    <table class="table table-bordered table-striped dataTable" id="requester-table">
-                        <thead>
-                            <tr>
-                                <th>Username</th>
-                                <th>Fullname</th>
-                                <th>Email</th>
-                                <th>Birthday</th>
-                                <th>Active</th>
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody></tbody>
-                    </table>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="box box-primary">
+            <div class="box-body large-text-container">
+                <p>@Html.ActionLink("Create New", "CreateRequester", null, new { @class = "btn btn-success" })</p>
+                <div class="pull-right" style="margin-right: 20px">
+                    <label>Availability:</label>
+                    <select id="availability-dropdown">
+                        <option value="2">All</option>
+                        <option value="1">Enabled Requesters</option>
+                        <option value="0">Disabled Requesters</option>
+                    </select>&nbsp;&nbsp;
+                    <label>Search:</label>
+                    <input type="text" id="search-txt" />
                 </div>
+                <table class="table table-bordered table-striped dataTable" id="requester-table">
+                    <thead>
+                        <tr>
+                            <th>Username</th>
+                            <th>Fullname</th>
+                            <th>Email</th>
+                            <th>Birthday</th>
+                            <th>Active</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
             </div>
         </div>
     </div>
-</section>
+</div>
 
 @Styles.Render("~/Content/datatables")
 @section scripts{
@@ -151,10 +149,10 @@
                 type: "POST",
                 success: function (data) {
                     if (data.success) {
-                        $.notify(data.message, "success")
+                        $.notify(data.message, "success");
                         $("#requester-table").dataTable().api().ajax.reload(null, false);
                     } else {
-                        $.notify(data.message, "error")
+                        $.notify(data.message, "error");
                     }
                 }
             });
