--- a/TMS/TMS/Areas/Admin/Views/ManageUser/Technician.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/Technician.cshtml
@@ -1,13 +1,15 @@
-﻿@{
-    ViewBag.Title = "Manage Help Desks";
+﻿@model IEnumerable<TMS.Models.AspNetUser>
+
+@{
+    ViewBag.Title = "Manage Technicians";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 <style>
-    #helpdesk-table th {
+    #technician-table th {
         font-size: 18px;
     }
 
-    #helpdesk-table td {
+    #technician-table td {
         font-size: 16px;
         vertical-align: middle;
     }
@@ -16,24 +18,25 @@
     <div class="col-xs-12">
         <div class="box box-primary">
             <div class="box-body large-text-container">
-                <p>@Html.ActionLink("Create New", "CreateHelpDesk", null, new { @class = "btn btn-success" })</p>
+                <p>@Html.ActionLink("Create New", "CreateTechnician", null, new { @class = "btn btn-success" })</p>
                 <div class="pull-right" style="margin-right: 20px">
                     <label>Availability:</label>
                     <select id="availability-dropdown">
                         <option value="2">All</option>
-                        <option value="1">Enabled Help Desks</option>
-                        <option value="0">Disabled Help Desks</option>
+                        <option value="1">Enabled Technicians</option>
+                        <option value="0">Disabled Technicians</option>
                     </select>&nbsp;&nbsp;
                     <label>Search:</label>
                     <input type="text" id="search-txt" />
                 </div>
-                <table class="table table-bordered table-striped dataTable" id="helpdesk-table" style="width: 100%">
+                <table class="table table-bordered table-striped dataTable" id="technician-table">
                     <thead>
                         <tr>
                             <th>Username</th>
                             <th>Fullname</th>
                             <th>Email</th>
                             <th>Birthday</th>
+                            <th>Department</th>
                             <th>Active</th>
                             <th>Action</th>
                         </tr>
@@ -50,7 +53,7 @@
     @Scripts.Render("~/bundles/datatables")
     <script>
         var initDataTable = function () {
-            $("#helpdesk-table").DataTable({
+            $("#technician-table").DataTable({
                 serverSide: true,
                 sort: true,
                 processing: true,
@@ -65,7 +68,7 @@
                     infoFiltered: ""
                 },
                 ajax: {
-                    url: "/Admin/ManageUser/GetHelpDesks",
+                    url: "/Admin/ManageUser/GetTechnicians",
                     data: function (d) {
                         d.availability_select = $("#availability-dropdown").val(),
                         d.search_text = $("#search-txt").val()
@@ -102,6 +105,13 @@
                         "targets": [4],
                         "sortable": false,
                         "render": function (data, type, row) {
+                            return row[6];
+                        }
+                    },
+                    {
+                        "targets": [5],
+                        "sortable": false,
+                        "render": function (data, type, row) {
                             if (row[5] == true) {
                                 return '<input type="checkbox" checked data-toggle="toggle" class="toggle" data-onstyle="success" onchange="toggleStatus(\'' + row[0] + '\')">';
                             } else {
@@ -110,10 +120,10 @@
                         }
                     },
                     {
-                        "targets": [5],
+                        "targets": [6],
                         "sortable": false,
                         "render": function (data, type, row) {
-                            return '<center><a href="/Admin/ManageUser/EditHelpDesk/' + row[0] + '"><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i></a></center>';
+                            return '<center><a href="/Admin/ManageUser/EditTechnician/' + row[0] + '"><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i></a></center>';
                         }
                     }
                 ]
@@ -121,7 +131,7 @@
         };
 
         var reloadDataTable = function () {
-            var oTable = $("#helpdesk-table").dataTable();
+            var oTable = $("#technician-table").dataTable();
             oTable.api().ajax.reload();
         };
 
@@ -147,10 +157,10 @@
                 type: "POST",
                 success: function (data) {
                     if (data.success) {
-                        $.notify(data.message, "success")
-                        $("#helpdesk-table").dataTable().api().ajax.reload(null, false);
+                        $.notify(data.message, "success");
+                        $("#technician-table").dataTable().api().ajax.reload(null, false);
                     } else {
-                        $.notify(data.message, "error")
+                        $.notify(data.message, "error");
                     }
                 }
             });
