--- a/TMS/TMS/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -198,6 +198,10 @@
     @RenderSection("scripts", required: false)
     <script>
         $(document).ready(function () {
+            $.validator.methods.date = function (value, element) {
+                Globalize.culture("en-AU");
+                return this.optional(element) || Globalize.parseDate(value) !== null;
+            };
             $(".datetime").datetimepicker({
                 timepicker: false,
                 format: 'd/m/Y'
