--- a/TMS/TMS/Areas/Technician/Views/ManageTicket/Solve.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/ManageTicket/Solve.cshtml
@@ -1,17 +1,133 @@
-﻿@{
+﻿@using TMS.Models;
+@{
     Layout = "~/Areas/Technician/Views/Shared/_Layout.cshtml";
 }
 @{
     ViewBag.Title = "Solve Ticket";
-    var ticket = ViewBag.Ticket;
-    var solveUser = ViewBag.solveUser;
-    var createdUser = ViewBag.CreatedUser  ;
+    Ticket ticket = ViewBag.Ticket;
+    AspNetUser solveUser = ViewBag.SolveUser;
+    AspNetUser createdUser = ViewBag.CreatedUser;
 }
 
+<style>
+    h4, h5, .labels {
+        color: #345aaa;
+    }
+
+    .ticket-contents {
+        line-height: 40px;
+    }
+
+    input, textarea {
+        max-width: 800px;
+    }
+
+    .pre-wrap {
+        white-space: pre-wrap;
+    }
+</style>
 
 <div class="row col-md-12">
     <div class="box box-primary">
-        
+        <div class="box-header">
+            <h4><b>Ticket: @ticket.Subject</b></h4>
+        </div>
+        <div class="box-body ticket-contents">
+            <div class="col-sm-2 labels">
+                <b>Created by: </b>
+            </div>
+            <div class="col-sm-4">@createdUser.Fullname</div>
+
+            <div class="col-sm-2 labels">
+                <b>Date opened: </b>
+            </div>
+            <div class="col-sm-4">@ticket.CreatedTime</div>
+
+            <div class="col-sm-2 labels">
+                <b>Status:  </b>
+            </div>
+            <div class="col-sm-4">
+                @{
+                    if (@ticket.Status == 1)
+                    {
+                        <span>Open</span>
+                    }
+                    else
+                    {
+                        <span>Closed</span>
+                    }
+                }
+            </div>
+
+            <div class="col-sm-2 labels">
+                <b>Last modified: </b>
+            </div>
+            <div class="col-sm-4">@ticket.ModifiedTime</div>
+
+            <div class="col-sm-2 labels">
+                <b>Subject: </b>
+            </div>
+            <div class="col-sm-10">@ticket.Subject</div>
+
+            <div class="col-sm-2 labels">
+                <b>Description: </b>
+            </div>
+            <div class="col-sm-10 pre-wrap">@ticket.Description</div>
+
+            @{
+                if (string.IsNullOrEmpty(ticket.Solution))
+                {
+                    <div class="col-sm-2 labels">
+                        <b>New solution: </b>
+                    </div>
+                    <div class="col-sm-10">
+                        <textarea class="form-control" rows="5"></textarea>
+                    </div>
+                }
+                else
+                {
+                    if (ticket.Status <= 2)
+                    {
+                        <div class="col-sm-2 labels">
+                            <b>Old solution: </b>
+                        </div>
+                        <div class="col-sm-10 pre-wrap">@ticket.Solution</div>
+                        <div class="col-sm-2 labels">
+                            <b>Solver:  </b>
+                        </div>
+                        <div class="col-sm-10">@(solveUser == null ? "none" : solveUser.Fullname)</div>
+                        <div class="col-sm-2 labels">
+                            <b>New solution: </b>
+                        </div>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" rows="5"></textarea>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="col-sm-2 labels">
+                            <b>Solution: </b>
+                        </div>
+                        <div class="col-sm-10 pre-wrap">@ticket.Solution</div>
+                    }
+                }
+            }
+
+        </div>
+        <div class="box box-footer">
+            <div class="col-sm-offset-5 col-sm-6">
+                @{
+                    if (ticket.Status <= 2)
+                    {
+                        <a class="btn btn-primary" href="#">Save</a>
+                        <a class="btn btn-default" href="#">Cancel</a>
+                    }
+                    else
+                    {
+                        <a class="btn btn-default" href="#">Cancel</a>
+                    }
+                }
+            </div>
+        </div>
     </div>
 </div>
-
