--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Priority.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Priority.cshtml
@@ -2,12 +2,12 @@
     ViewBag.Title = "Priority";
     Layout = "~/Views/Shared/TMSLayout.cshtml";
 }
+
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-primary">
-            <div class="box-header padding-bottom-20 pull-left ">
-                <button type="button" class="btn" data-toggle="modal" data-target="#myModal"
-                        onclick="clearModal(); $('#create-btn').attr('onclick', 'createPriority()');">
+            <div class="box-header padding-bottom-20">
+                <button type="button" class="btn" data-target="#myModal" onclick="showCreateModal()">
                     Create New Priority
                 </button>
             </div>
@@ -103,7 +103,6 @@
                     },
                     {
                         "render": function (data, type, row) {
-                            //return "<button type='button' class='fa fa-pencil' data-toggle='modal' data-target='#myModal'></button>";
                             return '<button type="button" class="fa fa-pencil" data-toggle="modal" onclick="getPriorityDetail(\'' + row[0] + '\')"></button>';
                         },
                         "targets": 2
@@ -119,15 +118,22 @@
         var clearModal = function () {
             $("#myModal").find("input").val("");
             $("#myModal").find("textarea").val("");
+            $(".text-danger").hide();
         }
+
+        var showCreateModal = function () {
+            clearModal();
+            $("#myModal").modal('show');
+            $('#create-btn').attr('onclick', 'createPriority()');
+        };
 
         var createPriority = function() {
             var name = $("#name-txt").val();
             if (name.trim() === "") {
                 $("#name-validation-message").html("Name is requried!");
                 $("#name-validation-message").show();
-            } else if (name.trim().length < 8) {
-                $("#name-validation-message").html("Name must be geater than 8 character");
+            } else if (name.trim().length < 4) {
+                $("#name-validation-message").html("Name must be longer than 4 characters!");
                 $("#name-validation-message").show();
             } else {
                 $.ajax({
@@ -140,23 +146,27 @@
                     },
                     success: function(data) {
                         if (data.success) {
-                            alert(data.message);
+                            $.notify(data.message, "success");
                             $("#myModal").modal("hide");
                             reloadDataTable();
                         } else {
                             if (data.error) {
-                                alert(data.message);
+                                $.notify(data.message, "error");
                             } else {
                                 $("#name-validation-message").html(data.message);
                                 $("#name-validation-message").show();
                             }
                         }
+                    },
+                    error: function () {
+                        $.notify("Cannot connect to server!", "error");
                     }
                 });
             }
         };
 
-        var getPriorityDetail = function(id) {
+        var getPriorityDetail = function (id) {
+            clearModal();
             $.ajax({
                 url: "/Admin/ManageSC/GetPriorityDetail",
                 dataType: "json",
@@ -172,9 +182,12 @@
                         $("#create-btn").attr("onclick", "editPriority('" + id + "')");
                     } else {
                         if (data.error) {
-                            alert(data.message);
+                          $.notify(data.message, "error");
                         }
                     }
+                },
+                error: function () {
+                    $.notify("Cannot connect to server!", "error");
                 }
             });
         };
@@ -184,8 +197,8 @@
             if (name.trim() === "") {
                 $("#name-validation-message").html("Name is required");
                 $("#name-validation-message").show();
-            } else if (name.trim().length < 8) {
-                $("#name-validation-message").html("Name must be longer than 8 characters! ");
+            } else if (name.trim().length < 4) {
+                $("#name-validation-message").html("Name must be longer than 4 characters! ");
                 $("#name-validation-message").show();
             } else {
                 //ajax syntax 
@@ -201,17 +214,20 @@
                     },
                     success: function (data) {
                         if (data.success) {
-                            alert(data.message);
+                            $.notify(data.message, "success");
                             $("#myModal").modal("hide");
                             reloadDataTable();
                         } else {
                             if (data.error) {
-                                alert(data.message);
+                                $.notify(data.message, "error");
                             } else if (!data.error) {
                                 $("#name-validation-message").html(data.message);
                                 $("#name-validation-message").show();
                             }
                         }
+                    },
+                    error: function () {
+                        $.notify("Cannot connect to server!", "error");
                     }
                 });
             }
